# fhenomenon

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml  lint.yml
benchmarks/: CMakeLists.txt  fhn_matvec_bench.cpp
benchmarks/corpus/: corpus_backend.cpp  corpus_backend.h  corpus_builder.h  corpus_oracle.cpp  corpus_oracle.h  corpus_shapes.cpp  corpus_shapes.h  corpus_types.h  fhn_corpus_main.cpp
cmake/: BuildType.cmake  CCache.cmake  CompilerWarnings.cmake  Config.cmake.in  LTO.cmake  Version.hpp.in  launch-cuda.in  launch-cxx.in
docs/: CMakeLists.txt  Doxyfile.in  vision-archive.md
docs/plans/: 2026-03-31-fhn-backend-design.md  2026-03-31-fhn-backend-impl.md
docs/superpowers/plans/: 2026-07-12-runtime-data-movement.md  2026-07-13-fhn-workload-corpus.md  2026-07-13-level-aware-byte-budgets.md
docs/superpowers/specs/: 2026-07-12-runtime-data-movement-design.md  2026-07-13-fhn-workload-corpus-design.md  2026-07-13-level-aware-byte-budgets-design.md
examples/: CMakeLists.txt  compuon.cpp  fhenon.cpp  session.cpp  session1.cpp  session2.cpp  session3.cpp  session4.cpp  tfhe_demo.cpp  tfhe_logic_demo.cpp
include/: Compuon.h  Configuration.h  Fhenomenon.h  Fhenon.h  KeyManager.h  Profile.h
include/Backend/: Backend.h  Builtin.h  External.h  Interface.h  SEALBackend.h  TfheBackend.h
include/Crypto/: ToyFHE.h
include/FHN/: CheddarFhnBackend.h  FhnDefaultExecutor.h  FhnMovementPlan.h  ToyFheKernels.h  fhn_backend_api.h  fhn_program.h
include/Parameter/: CKKSParameter.h  Parameter.h  ParameterGen.h  ParameterPreset.h
include/Scheduler/: ASTNode.h  ASTPass.h  Dispatcher.h  FusedOperation.h  LowerToFhnProgram.h  MatMulRecognitionPass.h  Operation.h  Planner.h  PreASTPass.h  Receiver.h  Scheduler.h  Strategy.h
include/Session/: Session.h  Session.tpp
include/Utils/: log.h
src/: CMakeLists.txt  Compuon.cpp  Fhenomenon.cpp  Fhenon.cpp
src/Backend/: Backend.cpp  Builtin.cpp  External.cpp  SEALBackend.cpp  TfheBackend.cpp
src/Backend/rust/: Cargo.toml
src/Backend/rust/src/: lib.rs
src/Crypto/: ToyFHE.cpp
src/FHN/: FhnDefaultExecutor.cpp  FhnMovementPlan.cpp  ToyFheKernels.cpp  fhn_program.cpp
src/FHN/cheddar/: CheddarFhnBackend.cpp
src/Parameter/: CKKSParameter.cpp  CMakeLists.txt  Parameter.cpp
src/Scheduler/: LowerToFhnProgram.cpp  MatMulRecognitionPass.cpp  Operation.cpp
src/Session/: Session.cpp
test/: CMakeLists.txt  CorpusUnitTest.cpp  FhnBackendApiTest.cpp  FhnCheddarGpuTest.cpp  FhnExecutorTest.cpp  FhnExternalBackendTest.cpp  FhnIntegrationTest.cpp  FhnMovementPlanTest.cpp  FhnProgramTest.cpp  FhnTestProgramBuilder.h  FhnToyFheTest.cpp  Foo.cpp  Foo.hpp  FooTest.cpp  LowerToFhnProgramTest.cpp  MatMulTest.cpp  NoSessionTest.cpp  ParameterTest.cpp  SessionTest.cpp  ToyFheEngineTest.cpp  partial_fhn_backend.cpp
tools/: tidy
